--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,23 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+a {
+  text-decoration: none;
+  color: inherit;
+}
+.active-scroll-spy {
+  background-color: yellowgreen;
+  border-radius: 15px;
+}
+* {
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+  scroll-behavior: smooth;
+  transition: all;
+  transition-duration: 0.3s;
+}
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -6,7 +26,17 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
-
+::-webkit-scrollbar{
+  height: 10px;
+    width: 10px;
+    background: #eee;
+    border-radius: 10px;
+}
+::-webkit-scrollbar-thumb {
+  background: #ddd;
+  border: 1px solid #ccc;
+  border-radius: 10px;
+}
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
