--- a/src/index.css
+++ b/src/index.css
@@ -15,6 +15,7 @@ a {
   padding: 0;
   margin: 0;
   scroll-behavior: smooth;
+  transition-timing-function: linear;
   transition: all;
   transition-duration: 0.3s;
 }
